src/test/deca/context/invalid/declParam-doubledef.context
declParam-doubledef.deca:2: